# HearOneDevice

./: .gitignore  README.md  \  from_GEMINI.txt  index.html  package-lock.json  package.json  receiver.html  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  robots.txt  sitemap.xml
src/: App.css  App.tsx  ReceiverApp.tsx  main.tsx  receiver.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: capture_android.rs  capture_linux.rs  capture_win.rs  channel.rs  lib.rs  main.rs  rtc.rs
src-tauri/src/local_server/: receiver.html  receiver.js
src/components/: Button.tsx
