[package]
name = "hear-one-device"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hear_one_device_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
local-ip-address = "0.6.12"
webrtc = "0.17.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync"] }
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
rust-embed = "8"
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
anyhow = "1.0.102"

[target.'cfg(target_os = "linux")'.dependencies]
cpal = "0.17.3"
libpulse-binding = "2.30.1"
libpulse-simple-binding = "2.29.0"

[target.'cfg(target_os = "windows")'.dependencies]
cpal = "0.17.3"

